Fix iOS button text-wrapping

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -53,11 +53,12 @@ h3 {
     border-radius: 5px;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.50);
     color: white;
-    font-size: 9px;
+    font-size: 8px;
     font-weight: bold;
     height: 76px;
     text-align: center;
     text-transform: uppercase;
+    white-space: nowrap;
     width: 76px;
 
     ion-icon {
